<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_str">Поиск</string>
    <string name="media_str">Медиатека</string>
    <string name="settings_str">Настройки</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="dark_teme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agree">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="activity_search">activity_search</string>
    <string name="activity_media">activity media</string>
    <string name="chooser_title">Выберите приложение</string>
    <string name="txt_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="name_email">gnd011@yandex.ru</string>
    <string name="subject_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="txt_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_oferta">https://yandex.ru/legal/practicum_b2b_subscription_offer/</string>
    <string name="clear_string">clear string</string>
    <string name="stringNotFound">Ничего не нашлось</string>
    <string name="stringComProblem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="update_request">Обновить</string>
    <string name="duration_track">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="year_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>
    <string name="test_time_play">0:00</string>
    <string name="play_lists">Плейлисты</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_create_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemMenu1">item1</string>
    <string name="itemMenu2">item2</string>
    <string name="itemMenu3">item3</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="create_pl_descr">Описание</string>
    <string name="create_pl_name">Название*</string>
    <string name="create_pl_start">Создать</string>
    <string name="add_to_pl">Добавить в плейлист</string>
    <string name="share_bs_menu">Поделиться</string>
    <string name="edit_bs_menu">Редактировать информацию</string>
    <string name="delete_bs_menu">Удалить плейлист</string>
    <string name="edit_plist">Редактировать</string>
    <string name="save_plist">Сохранить</string>
</resources>