<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".ui.settings.activity.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim56"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dim4"
        android:paddingVertical="@dimen/dim4">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="@dimen/dim48"
            android:layout_height="@dimen/dim48"
            android:contentDescription="@string/back"

            android:padding="@dimen/dim12"
            app:srcCompat="@drawable/back" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingStart="@dimen/dim12"
            android:paddingTop="10dp"
            android:paddingEnd="86dp"
            android:paddingBottom="@dimen/dim12"
            android:text="@string/settings_str"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="500"
            android:textSize="@dimen/dim22sp" />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim61"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dim24"
        android:fontFamily="@font/ys_display_regular"
        android:paddingStart="@dimen/dim16"
        android:paddingEnd="6dp"
        android:text="@string/dark_teme"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/dim16sp"
        android:theme="@style/SwitchStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim61"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shareTextView"
            style="@style/SettingsPageTxtView"
            android:text="@string/share" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/shareImageView"
            style="@style/SettingsPageImgView"
            android:contentDescription="@string/share"
            app:srcCompat="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim61"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/supportTextView"
            style="@style/SettingsPageTxtView"
            android:text="@string/support" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/supportImageView"
            style="@style/SettingsPageImgView"
            android:layout_marginEnd="@dimen/dim14"
            android:contentDescription="@string/support"
            app:srcCompat="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim61"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/agreeTextView"
            style="@style/SettingsPageTxtView"
            android:text="@string/agree" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/agreeImageView"
            style="@style/SettingsPageImgView"
            android:contentDescription="@string/support"
            app:srcCompat="@drawable/agree" />
    </LinearLayout>
</LinearLayout>