<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dim24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="136dp" />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/albumGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="albumTv,albumTvLbl"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dim24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBtmBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dim16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBtmBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dim16" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim4"
        android:layout_marginTop="@dimen/dim4"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_player" />

    <ImageView
        android:id="@+id/playerIV"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/placeholder_player"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/trackTV"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginTop="@dimen/dim18"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/dim22sp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playerIV"
        tools:text="Beatles" />

    <TextView
        android:id="@+id/artistTV"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/dim12"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackTV"
        tools:text="Beatles" />

    <TextView
        android:id="@+id/timePlayTV"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/dim12"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playIB"
        android:text="@string/test_time_play" />

    <ImageButton
        android:id="@+id/addFavoriteIB"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="@dimen/dim54"
        android:background="@drawable/round_button"
        android:src="@drawable/add_pl"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistTV" />

    <ImageButton
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="@dimen/dim54"
        android:background="@drawable/round_button"
        android:src="@drawable/add_favorite"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artistTV" />

    <ImageButton
        android:id="@+id/playIB"
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/round_button"
        android:src="@drawable/play_btn"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistTV" />
<!--left colon start-->
    <TextView
        android:id="@+id/timeTvLbl"
        android:text="@string/duration_track"
        app:layout_constraintBottom_toTopOf="@+id/albumTvLbl"
        app:layout_constraintStart_toEndOf="@id/leftBtmBorder"
        app:layout_constraintTop_toBottomOf="@id/horizontalBorder"
        style="@style/left_tv_player" />
    <TextView
        android:id="@+id/albumTvLbl"
        style="@style/left_tv_player"
        android:text="@string/album_track"
        app:layout_constraintBottom_toTopOf="@+id/yearTvLbl"
        app:layout_constraintStart_toEndOf="@id/leftBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/timeTvLbl" />
    <TextView
        android:id="@+id/yearTvLbl"
        style="@style/left_tv_player"
        android:text="@string/year_track"
        app:layout_constraintBottom_toTopOf="@+id/genreTvLbl"
        app:layout_constraintStart_toEndOf="@id/leftBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/albumTvLbl" />
    <TextView
        android:id="@+id/genreTvLbl"
        style="@style/left_tv_player"
        android:text="@string/genre_track"
        app:layout_constraintBottom_toTopOf="@+id/countryTvLbl"
        app:layout_constraintStart_toEndOf="@id/leftBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/yearTvLbl" />
    <TextView
        android:id="@+id/countryTvLbl"
        style="@style/left_tv_player"
        android:layout_marginBottom="28dp"
        android:text="@string/country_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/genreTvLbl" />
<!--right colon start-->
    <TextView
        android:id="@+id/timeTv"
        app:layout_constraintBottom_toTopOf="@+id/albumTv"
        app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
        app:layout_constraintTop_toBottomOf="@id/horizontalBorder"
        tools:text="5:35"
        style="@style/right_tv_player" />
    <TextView
        android:id="@+id/albumTv"
        style="@style/right_tv_player"
        app:layout_constraintBottom_toTopOf="@+id/yearTv"
        app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/timeTv"
        tools:text="Yesterday" />
    <TextView
        android:id="@+id/yearTv"
        style="@style/right_tv_player"
        app:layout_constraintBottom_toTopOf="@+id/genreTv"
        app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/albumTv"
        tools:text="1965" />
    <TextView
        android:id="@+id/genreTv"
        style="@style/right_tv_player"
        app:layout_constraintBottom_toTopOf="@+id/countryTv"
        app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/yearTv"
        tools:text="Рок" />
    <TextView
        android:id="@+id/countryTv"
        style="@style/right_tv_player"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
        app:layout_constraintTop_toBottomOf="@+id/genreTv"
        tools:text="Англия" />
</androidx.constraintlayout.widget.ConstraintLayout>
