<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription">




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dim24" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/albumGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="albumTv,albumTvLbl" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/yearGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="yearTv,yearTvLbl" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dim24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBtmBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dim16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBtmBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dim16" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim4"
            android:layout_marginTop="@dimen/dim4"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_back_player" />

        <ImageView
            android:id="@+id/playerIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="@dimen/dim24"
            android:src="@drawable/placeholder_player"
            app:layout_constraintBottom_toTopOf="@id/trackTV"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trackTV"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginBottom="@dimen/dim12"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/dim22sp"
            app:layout_constraintBottom_toTopOf="@id/artistTV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            tools:text="Beatles" />

        <TextView
            android:id="@+id/artistTV"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginBottom="38dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/playIB"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            tools:text="Beatles" />

        <TextView
            android:id="@+id/timePlayTV"
            android:layout_width="100dp"
            android:layout_height="16dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/test_time_play"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/timeTvLbl"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder" />

        <ImageButton
            android:id="@+id/addToPl"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/round_button"
            android:src="@drawable/add_pl"
            app:layout_constraintBottom_toTopOf="@id/timeTvLbl"
            app:layout_constraintStart_toEndOf="@id/leftBorder" />

        <ImageButton
            android:id="@+id/favoriteIB"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/round_button"
            android:src="@drawable/isnot_favorite"
            app:layout_constraintBottom_toTopOf="@id/timeTv"
            app:layout_constraintEnd_toStartOf="@id/rightBorder" />

        <ImageButton
            android:id="@+id/playIB"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginBottom="@dimen/dim12"
            android:background="@drawable/round_button"
            android:clickable="false"
            android:src="@drawable/play_btn"
            app:layout_constraintBottom_toTopOf="@id/timePlayTV"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder" />

        <TextView
            android:id="@+id/timeTvLbl"
            style="@style/left_tv_player"
            android:layout_marginBottom="16dp"
            android:text="@string/duration_track"
            app:layout_constraintBottom_toTopOf="@+id/albumTvLbl"
            app:layout_constraintStart_toEndOf="@id/leftBtmBorder" />

        <TextView
            android:id="@+id/albumTvLbl"
            style="@style/left_tv_player"
            android:layout_marginBottom="16dp"
            android:text="@string/album_track"
            app:layout_constraintBottom_toTopOf="@+id/yearTvLbl"
            app:layout_constraintStart_toEndOf="@id/leftBtmBorder" />

        <TextView
            android:id="@+id/yearTvLbl"
            style="@style/left_tv_player"
            android:layout_marginBottom="17dp"
            android:text="@string/year_track"
            app:layout_constraintBottom_toTopOf="@+id/genreTvLbl"
            app:layout_constraintStart_toEndOf="@id/leftBtmBorder" />

        <TextView
            android:id="@+id/genreTvLbl"
            style="@style/left_tv_player"
            android:layout_marginBottom="16dp"
            android:text="@string/genre_track"
            app:layout_constraintBottom_toTopOf="@+id/countryTvLbl"
            app:layout_constraintStart_toEndOf="@id/leftBtmBorder" />

        <TextView
            android:id="@+id/countryTvLbl"
            style="@style/left_tv_player"
            android:layout_marginBottom="28dp"
            android:text="@string/country_track"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/leftBtmBorder" />

        <TextView
            android:id="@+id/timeTv"
            style="@style/right_tv_player"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/albumTv"
            app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumTv"
            style="@style/right_tv_player"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/yearTv"
            app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
            tools:text="Yesterday" />

        <TextView
            android:id="@+id/yearTv"
            style="@style/right_tv_player"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/genreTv"
            app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreTv"
            style="@style/right_tv_player"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/countryTv"
            app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
            tools:text="Рок" />

        <TextView
            android:id="@+id/countryTv"
            style="@style/right_tv_player"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightBtmBorder"
            tools:text="Англия" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/addPlBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottomsheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bottomsheet_head"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:text="@string/add_to_pl"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/dim19sp" />

        <Button
            android:id="@+id/playListsBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim24"
            android:backgroundTint="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="@dimen/dim14"
            android:paddingTop="@dimen/dim10"
            android:paddingEnd="@dimen/dim14sp"
            android:paddingBottom="10dp"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/dim14sp"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listPlBotSh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dim20" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--tools:visibility="gone"-->
    <!--    android:background="#323233"-->
    <!--tools:context=".ui.player.activity.PlayerActivity"-->
    <!--tools:context=".MainActivity"-->
    <!--
        tools:visibility="gone"-->

    <!--

        />-->
